# palimpsest

./: .codecov.yml  .coveragerc  .envrc  .gitignore  .gitmodules  .palimpsest  .palimpsest.yaml  .vale.ini  .yamllint.yaml  2021_event_names.txt  2021_scene_names.txt  2022_event_names.txt  2022_scene_names.txt  2023_event_names.txt  2023_scene_names.txt  2024_event_names.txt  2024_scene_names.txt  ALL_EXTENDED_YAML_HEADERS.md  CLAUDE.md  EXPORT_IMPLEMENTATION_COMPLETE.md  EXPORT_IMPLEMENTATION_STATUS.md  EXPORT_JSON_DESIGN.md  EXPORT_TEST_ISSUES.md  FIX_PEOPLE_DATA_WORKFLOW.md  GITHUB_CICD_EVALUATION.md  IMPORT_LOGIC_AUDIT.md  LICENSE  Makefile  PHASE1_COMPLETION.md  PHASE2_1_REPORT.md  PHASE2_2_REPORT.md  PHASE2_3_REPORT.md  PHASE2_COMPLETE.md  PHASE2_COMPLETION.md  PHASE2_ENHANCEMENTS_PLAN.md  PHASE2_EXTENDED_DESIGN.md  PHASE2_EXTENDED_REPORT.md  PHASE2_FINAL_STATUS.md  PHASE2_PROGRESS.md  PHASE3_DESIGN.md  (+47 more)
.github/: dependabot.yml
alembic/: env.py
cleaning/: journal_2015.md  journal_2016.md  journal_2017.md  journal_2018.md  journal_2019.md  journal_2021.md  journal_2022.md  journal_2023.md  journal_2024.md  journal_2025.md  journal__2010.md
code/: metadata.py  paths.py
compilations/: 2015_aug.md  2015_dec.md  2015_nov.md  2015_oct.md  2015_sep.md  2016_apr.md  2016_aug.md  2016_dec.md  2016_feb.md  2016_jan-apr.md  2016_jan.md  2016_jul.md  2016_jun.md  2016_mar.md  2016_may-aug.md  2016_may.md  2016_nov.md  2016_oct.md  2016_sep-dec.md  2016_sep.md  2017_feb.md  2017_jan-2019_feb.md  2017_jan.md  2017_jun.md  2018_dec.md  2019_feb.md  2019_jan.md  2021_aug.md  (+23 more)
(+761 files in other folders)
